tests/snapshots/parity_cli__cli-clear.snap
---
source: tests/parity_cli.rs
expression: "json!({ \"oracle\": oracle, \"rust\": rust })"
---
{
  "oracle": {
    "args": [
      "--clear"
    ],
    "exit_code": 0,
    "last_used": null,
    "oracle_mode": "bundle",
    "scenario": "cli-clear",
    "source_commit": "06f0fe11e694b8619f63f8b0db10dbdc5e7e5a44",
    "stderr": "",
    "stdout": "No Claude data directory found\n\u001b[?25h\u001b[?1049l"
  },
  "rust": {
    "args": [
      "--clear"
    ],
    "exit_code": 0,
    "last_used": null,
    "stderr": "",
    "stdout": "No Claude data directory found\n"
  }
}
